Sistema de Notificaciones Modificación
Se eliminaron todos los otros archivos de notificaciones y se arreglaron los llamados y usos de las clases de cada usuario, main y ventanainicio las cuales hacian uso de las notificaciones

Y se agregaron los siguientes archivos que manejan TODO el sistema de notificaciones actual
NotificationPanels.java (views/notifications/)
NotificationUI.java (views/notifications/)
NotificationGroups.java (services/)
NotificationCore.java (services/)
NotificationModels.java (models/)